# kaiman-webhooks-receiver

./: .env-example  Cargo.toml  Dockerfile  Justfile  README.md  config.yml-dist  docker-compose.yml
docs/: API.md  CONFIG.md  FAQ.md  INSTALL.md  INTEGRATIONS.md  MONITORING.md  SECURITY.md  trivy-scan-report.txt
docs/integrations/: TELEGRAM.md  TODOIST.md
frontend/: eslint.config.mjs  package.json
frontend/src/components/: App.svelte  ChannelSelect.svelte  DebugSend.svelte  QueueView.svelte  TokenGate.svelte  WebhooksList.svelte
frontend/src/layouts/: Layout.astro
frontend/src/lib/: api.ts
helm-chart/: Chart.yaml  README.md  values.yaml
helm-chart/templates/: configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml
src/lib/: lib.rs
src/lib/domain/config/: model.rs
src/lib/domain/webhook/: model.rs  ports.rs  service.rs
src/lib/outbound/config/: env.rs
src/lib/outbound/sqlite/: init.rs  webhook.rs
test-data/: config.yml
