[package]
name = "kwp"
version = "0.4.0"
edition = "2024"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[[bin]]
name = "kwp"
path = "src/bin/kwp/main.rs"

[lib]
name = "kwp_lib"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"

tokio = { version = "1.45.1", features = ["full"] }
axum = { version = "0.8.4", features = ["json", "http1", "tokio"] }

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9"

config = "0.15.19"
dotenvy = "0.15"
subtle = "2"
ipnet = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tera = "1.20.1"

log = "0.4.27"
log4rs = "1.3.0"

metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3.4.0"
tower = { version = "0.5", features = ["util"] }
