[package]
name = "kwp"
version = "0.7.1"
edition = "2024"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[[bin]]
name = "kwp"
path = "src/bin/kwp/main.rs"

[lib]
name = "kwp_lib"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.102"
thiserror = "2.0.18"

tokio = { version = "1.49.0", features = ["full"] }
axum = { version = "0.8.8", features = ["json", "http1", "tokio"] }

bytes = "1.11.1"
reqwest = { version = "0.13.2", features = ["json"], default-features = false }

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"

config = "0.15.19"
dotenvy = "0.15.7"
subtle = "2.6.1"
ipnet = "2"
hmac = "0.12"
sha2 = "0.10.9"
hex = "0.4"
tera = "1.20.1"

metrics = "0.24.3"
metrics-exporter-prometheus = { version = "0.18.1", default-features = false, features = ["http-listener"] }

rust-embed = "8.11.0"
mime_guess = "2"

log = "0.4.27"
log4rs = "1.3.0"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3.4.0"
tower = { version = "0.5", features = ["util"] }
